# cookiecutter-data-science

./: 404.html  README.md  cookiecutter.json  index.html  mkdocs.yml  requirements.txt
.github/workflows/: docs.yml  tests.yml
docs/: index.md  tips.md  usage.md
docs/stylesheets/: extra.css
search/: search_index.json
stylesheets/: extra.css
tests/: conftest.py  test_creation.py
tips/: index.html
usage/: index.html
{{ cookiecutter.repo_name }}/: .gitignore  .pre-commit-config.yaml  Makefile  README.md  environment.yaml  environment.yml  pyproject.toml  setup.cfg  {% if cookiecutter.env_choice == 'conda' -%} environment.yml {%- endif %}  {% if cookiecutter.env_choice == 'conda' -%} pyproject.toml {%- endif %}  {% if cookiecutter.env_choice == 'conda' -%} setup.cfg {%- endif %}  {% if cookiecutter.env_choice == 'poetry' -%} pyproject.toml {%- endif %}
